# python_project_template

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  lint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.azure/: Readme.md  spn-setup.sh
.azure/ci/.gitkeep/: deploy-to-existing-kubernetes-cluster.yml
app/: __init__.py  config.py  conftest.py  exceptions.py  log.py
k8s/: kustomization.yaml
k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/dev/: kustomization.yaml
k8s/production/: kustomization.yaml
k8s/staging/: kustomization.yaml
test/: sample_test.py
