[project]
name = "template_project"
version = "0.1.0"
description = "Flask template project."
authors = [
    "Sandeep Kumar Pradhan <sandeeppradhan92@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/sandeeppradhan92/flask_project_template"
repository = "https://github.com/sandeeppradhan92/flask_project_template"
documentation = "https://github.com/sandeeppradhan92/flask_project_template"

keywords = ["packaging", "dependency", "template", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }
isort = { version = "^5.9.2", python = "^3.6" }

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88 # override black's default line-length
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
# make it compatible with black
profile = "black" 
